# test-release-plz

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  k-releaser.yml  release-plz.yml
crates/kellnr/: Cargo.toml
crates/kellnr-appstate/: CHANGELOG.md  Cargo.toml
crates/kellnr-appstate/src/: lib.rs
crates/kellnr-auth/: CHANGELOG.md  Cargo.toml
crates/kellnr-auth/src/: lib.rs
crates/kellnr/src/: main.rs
