[workspace]
default-members = ["crates/kellnr"]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["kellnr.io"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "1.4.0"
description = "Kellnr is a self-hosted registry for Rust crates with support for rustdocs and crates.io caching."
homepage = "https://kellnr.io/"
repository = "https://github.com/kellnr/kellnr"
documentation = "https://kellnr.io/documentation"
readme = "README.md"
keywords = ["cargo", "registry", "crates-io", "self-hosted"]

[workspace.dependencies]
# Internal dependencies from Kellnr
kellnr-appstate = { version = "1.4.0", path = "./crates/kellnr-appstate" }
kellnr-auth = { version = "1.4.0", path = "./crates/kellnr-auth" }
