[package]
name = "kellnr-auth"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
